testsuite/tests/partial-sigs/should_fail/NamedWildcardsEnabled.stderr

NamedWildcardsEnabled.hs:4:8: error:
    Found hole: _a :: Bool
    To use the inferred type, enable PartialTypeSignatures
    In the type signature for ‘foo’: _a -> _b

NamedWildcardsEnabled.hs:4:14: error:
    Found hole: _b :: Bool
    To use the inferred type, enable PartialTypeSignatures
    In the type signature for ‘foo’: _a -> _b
